--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <header class="navbar navbar-expand-lg navbar-light bg-light shadow">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light shadow"></nav>
             <div class="container-fluid">
                 <img src="./assets/logo-nav.png" alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150" height="50" class="d-inline-block align-text-top ms-2">
                 <button type="button" class="btn btn-success me-2">login/cadastro</button>
               </div>
             </div>
+        </nav>    
     </header>
     <section class="conteudo">
     <div class="container-capa ms-4">
