--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </div>
     </section>
    
+    <footer class="footer">
+        <p class="text-dark m-0 text-center">contato: <a class="text-dark" href="mailto:email@linguigena">email@linguigena.com.br</a></p>
+      </footer>
+        
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
