--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -26,23 +26,25 @@
             <form>
                 <h3 class="titulo-formulario">Cadastre-se para ser voluntário!</h3>
                 <div class="d-flex mt-5">
-                    <input type="text" aria-label="Nome" placeholder="Nome Completo" class="form-control mb-3 me-3">
-                    <input type="text" aria-label="Lingua" placeholder="Língua nativa" class="form-control mb-3">
+                    <input type="text" id="nome" aria-label="Nome" placeholder="Nome Completo" class="form-control mb-3 me-3" >
+                    <input type="text" id="lingua" aria-label="Lingua" placeholder="Língua nativa" class="form-control mb-3" >
                 </div>
                 <div class="mb-3">
-                    <input type="email" class="form-control mb-3" placeholder="E-mail" id="exampleInputEmail1"
-                        aria-describedby="emailHelp">
-                    <input type="password" class="form-control mb-3" placeholder="Senha" id="exampleInputPassword1">
+                    <input type="email" id="email" class="form-control mb-3" placeholder="E-mail" id="exampleInputEmail1"
+                        aria-describedby="emailHelp" >
+                    <input type="password" id="senha" class="form-control mb-3" placeholder="Senha" id="exampleInputPassword1">
                     <input type="password" class="form-control mb-3" placeholder="Confirme sua senha"
-                        id="exampleInputPassword1">
+                        id="exampleInputPassword1" id="xp">
                 </div>
                 <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-success">Cadastrar</button>
+                <button type="submit" class="btn btn-success" onclick="cadastroUsuario()">Cadastrar</button>
             </div>
             </form>
         </section>
     </main>
 
+     <script       src="https://code.jquery.com/jquery-3.6.0.min.js"       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="       crossorigin="anonymous"     ></script>
+     <script src="../js/index.js"></script> 
 </body>
 
 </html>
