--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="./assets/logo-nav.png"
                 alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
                 height="50" class="d-inline-block align-text-top ms-2">
-            <button type="button" class="btn btn-success me-2">Entrar/Cadastrar</button>
+            <button type="button" id="btnEntrar" class="btn btn-success me-2">Entrar/Cadastrar</button>
         </div>
         </div>
     </header>
@@ -33,7 +33,7 @@
                     registro pasa as futuras gerações, você pode nos ajudar?
                 </h4>
                 <div class="container-botao mb-5">
-                    <button type="button" class="btn btn-success mt-4">Quero ser um
+                    <button type="button" id="btnColaborador" class="btn btn-success mt-4">Quero ser um
                         colaborador!</button>
                 </div>
             </div>
