FEAT: adicinei o input de transcricao

--- a/src/html/registro-palavras.html
+++ b/src/html/registro-palavras.html
@@ -29,6 +29,9 @@
                     <input type="text" class="form-control  mb-4 input-palavras" placeholder="Palavra na língua nativa" id="palavra-nativa" aria-describedby="default input example">
 
                     <input type="text" class="form-control  mb-4 input-palavras" placeholder="Palavra em português" id="palavra-portugues" aria-describedby="default input example">
+
+                    <input type="text" class="form-control  mb-4 input-palavras" placeholder="Transcrição" id="transcricao" aria-describedby="default input example">
+
                         <button type="button" class="btn btn-success mb-5">Cadastrar palavra</button>
                 </form>
             </section>
