FEAT: header com link para a landing page

--- a/src/html/recuparecao-senha.html
+++ b/src/html/recuparecao-senha.html
@@ -12,7 +12,9 @@
 <body>
     <header class="navbar navbar-expand-lg navbar-light bg-light shadow">
             <div class="container-fluid">
-                <img src="../../assets/logo-nav.png" alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150" height="50" class="d-inline-block align-text-top ms-2">
+                <a href="../../index.html"><img src="../../assets/logo-nav.png"
+                    alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
+                    height="50" class="d-inline-block align-text-top ms-2"></a>
               </div>
             </div>
     </header>
