FEAT: adição de sobre e quem somos na navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             <img src="./assets/logo-nav.png"
                 alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
                 height="50" class="d-inline-block align-text-top ms-2">
-            <button type="button" id="btnEntrar" class="btn btn-success me-2">Entrar/Cadastrar</button>
+                <div>
+                <a class="me-3 link-nav" href="./src/html/sobre.html">Sobre</a>
+                <a class="me-3 link-nav" href="./src/html/quem-somos.html">Quem somos</a>
+            <button type="button" id="btnEntrar" class="btn btn-success me-2">Entrar/Cadastrar</button></div>
         </div>
         </div>
     </header>
