--- a/src/html/quem-somos.html
+++ b/src/html/quem-somos.html
@@ -16,101 +16,101 @@
     <header class="navbar navbar-expand-lg navbar-light bg-light shadow">
         <div class="container-fluid">
             <a href="../../index.html"><img src="../../assets/logo-nav.png"
-                alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
-                height="50" class="d-inline-block align-text-top ms-2"></a>
-        </div>
+                    alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
+                    height="50" class="d-inline-block align-text-top ms-2"></a>
+            <div>
+                <a class="me-3 link-nav" href="../html/sobre.html">Sobre</a>
+            </div>
+
         </div>
     </header>
     <section id="main-content" class="mt-5 contatos-cards">
-            <div class="pessoas-style camila">
-                <figure class="developers-img">
-                    <img src="../../assets/camila.png" alt="..." class="pessoas pt-2 pb-2">
-                </figure>
+        <div class="pessoas-style camila">
+            <figure class="developers-img">
+                <img src="../../assets/camila.png" alt="..." class="pessoas pt-2 pb-2">
+            </figure>
 
-                <h5 class="nomes">Camila Rangel</h5>
-                <p>Dev. Front-end e Designer</p>
-                <div class="redes-sociais">
-                    <a href="https://www.linkedin.com/in/cafrangel/"><img src="../../assets/in-icon.png"
-                            class="img-redes"></a>
-                    <a href="https://github.com/cafrangel"><img src="../../assets/github-icon.png"
-                            class="img-redes"></a>
-                </div>
+            <h5 class="nomes">Camila Rangel</h5>
+            <p>Dev. Front-end e Designer</p>
+            <div class="redes-sociais">
+                <a href="https://www.linkedin.com/in/cafrangel/"><img src="../../assets/in-icon.png"
+                        class="img-redes"></a>
+                <a href="https://github.com/cafrangel"><img src="../../assets/github-icon.png" class="img-redes"></a>
+            </div>
+
+        </div>
+        <div class="pessoas-style germano">
+            <figure class="developers-img">
+                <img src="../../assets/germano.png" alt="..." class="pessoas pt-2 pb-2">
+            </figure>
+
+            <h5 class="nomes">Matheus Germano</h5>
+            <p>Product Owner</p>
+            <div class="redes-sociais">
+                <a href="https://www.linkedin.com/in/matheusgermanodesouza/"><img src="../../assets/in-icon.png"
+                        class="img-redes"></a>
+                <a href="https://github.com/matgermano"><img src="../../assets/github-icon.png" class="img-redes"></a>
+            </div>
+
+        </div>
+        <div class="pessoas-style helio">
+            <figure class="developers-img">
+                <img src="../../assets/helio.png" alt="..." class="pessoas pt-2 pb-2">
+            </figure>
+
+            <h5 class="nomes">Hélio Franco</h5>
+            <p>Dev. Full-Stack</p>
+            <div class="redes-sociais">
+                <a href="https://www.linkedin.com/in/dev-heliofranco/"><img src="../../assets/in-icon.png"
+                        class="img-redes"></a>
+                <a href="https://github.com/devHelioFranco"><img src="../../assets/github-icon.png"
+                        class="img-redes"></a>
+
 
             </div>
-            <div class="pessoas-style germano">
-                <figure class="developers-img">
-                    <img src="../../assets/germano.png" alt="..." class="pessoas pt-2 pb-2">
-                </figure>
+        </div>
+        <div class="pessoas-style joyce">
+            <figure class="developers-img">
+                <img src="../../assets/joyce.png" alt="..." class="pessoas pt-2 pb-2">
+            </figure>
 
-                <h5 class="nomes">Matheus Germano</h5>
-                <p>Product Owner</p>
-                <div class="redes-sociais">
-                    <a href="https://www.linkedin.com/in/matheusgermanodesouza/"><img src="../../assets/in-icon.png"
-                            class="img-redes"></a>
-                    <a href="https://github.com/matgermano"><img src="../../assets/github-icon.png"
-                            class="img-redes"></a>
-                </div>
-
+            <h5 class="nomes">Joyce Lusia</h5>
+            <p>Dev. Front-End e Designer</p>
+            <div class="redes-sociais">
+                <a href="https://www.linkedin.com/in/joyce-lusia/"><img src="../../assets/in-icon.png"
+                        class="img-redes"></a>
+                <a href="https://github.com/joycelusia"><img src="../../assets/github-icon.png" class="img-redes"></a>
             </div>
-            <div class="pessoas-style helio">
-                <figure class="developers-img">
-                    <img src="../../assets/helio.png" alt="..." class="pessoas pt-2 pb-2">
-                </figure>
 
-                <h5 class="nomes">Hélio Franco</h5>
-                <p>Dev. Full-Stack</p>
-                <div class="redes-sociais">
-                    <a href="https://www.linkedin.com/in/dev-heliofranco/"><img src="../../assets/in-icon.png"
-                            class="img-redes"></a>
-                    <a href="https://github.com/devHelioFranco"><img src="../../assets/github-icon.png"
-                            class="img-redes"></a>
+        </div>
+        <div class="pessoas-style julia">
+            <figure class="developers-img">
+                <img src="../../assets/julia.png" alt="..." class="pessoas pt-2 pb-2">
+            </figure>
 
-
-                </div>
+            <h5 class="nomes">Julia Villela</h5>
+            <p>UX Designer</p>
+            <div class="redes-sociais">
+                <a href="https://www.linkedin.com/in/juliavillela24/"><img src="../../assets/in-icon.png"
+                        class="img-redes"></a>
             </div>
-            <div class="pessoas-style joyce">
-                <figure class="developers-img">
-                    <img src="../../assets/joyce.png" alt="..." class="pessoas pt-2 pb-2">
-                </figure>
 
-                <h5 class="nomes">Joyce Lusia</h5>
-                <p>Dev. Front-End e Designer</p>
-                <div class="redes-sociais">
-                    <a href="https://www.linkedin.com/in/joyce-lusia/"><img src="../../assets/in-icon.png"
-                            class="img-redes"></a>
-                    <a href="https://github.com/joycelusia"><img src="../../assets/github-icon.png"
-                            class="img-redes"></a>
-                </div>
+        </div>
+        <div class="pessoas-style rafa">
+            <figure class="developers-img">
+                <img src="../../assets/rafael.png" alt="..." class="pessoas pt-2 pb-2">
+            </figure>
 
+            <h5 class="nomes">Rafael Soares</h5>
+            <p>Dev. Back-End</p>
+            <div class="redes-sociais mb-5">
+                <a href="https://www.linkedin.com/in/rafaelsfsoares/"><img src="../../assets/in-icon.png"
+                        class="img-redes"></a>
+                <a href="https://github.com/RafaelSFsoares"><img src="../../assets/github-icon.png"
+                        class="img-redes"></a>
             </div>
-            <div class="pessoas-style julia">
-                <figure class="developers-img">
-                    <img src="../../assets/julia.png" alt="..." class="pessoas pt-2 pb-2">
-                </figure>
 
-                <h5 class="nomes">Julia Villela</h5>
-                <p>UX Designer</p>
-                <div class="redes-sociais">
-                    <a href="https://www.linkedin.com/in/juliavillela24/"><img src="../../assets/in-icon.png"
-                            class="img-redes"></a>
-                </div>
-
-            </div>
-            <div class="pessoas-style rafa">
-                <figure class="developers-img">
-                    <img src="../../assets/rafael.png" alt="..." class="pessoas pt-2 pb-2">
-                </figure>
-
-                <h5 class="nomes">Rafael Soares</h5>
-                <p>Dev. Back-End</p>
-                <div class="redes-sociais mb-5">
-                    <a href="https://www.linkedin.com/in/rafaelsfsoares/"><img src="../../assets/in-icon.png"
-                            class="img-redes"></a>
-                    <a href="https://github.com/RafaelSFsoares"><img src="../../assets/github-icon.png"
-                            class="img-redes"></a>
-                </div>
-
-            </div>
+        </div>
     </section>
 
 </body>
