--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -18,7 +18,8 @@
             <a href="../../index.html"><img src="../../assets/logo-nav.png"
                 alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
                 height="50" class="d-inline-block align-text-top ms-2"></a>
-           
+                <div>
+                <a class="me-3 link-nav" href="../html/quem-somos.html">Quem somos</a></div>
         </div>
         </div>
     </header>
