--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastre-se</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
+    <link rel="stylesheet" href="../css/tipografia.css">
     <link rel="stylesheet" href="../css/cadastro.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -24,7 +25,7 @@
     <main class="d-flex justify-content-center">
         <section class="pt-5 mx-4">
             <form>
-                <h3 class="titulo-formulario">Cadastre-se para ser voluntário!</h3>
+                <h3 class="titulo-cadastro">Cadastre-se para ser voluntário!</h3>
                 <div class="d-flex mt-5">
                     <input type="text" id="nome" aria-label="Nome" placeholder="Nome Completo" class="form-control mb-3 me-3" >
                     <input type="text" id="lingua" aria-label="Lingua" placeholder="Língua nativa" class="form-control mb-3" >
