--- a/src/html/quem-somos.html
+++ b/src/html/quem-somos.html
@@ -8,6 +8,7 @@
     <title>Quem somos</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
     <link rel="stylesheet" href="../css/quem-somos.css">
+    <link rel="stylesheet" href="../css/tipografia.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
