--- a/src/html/recuparecao-senha.html
+++ b/src/html/recuparecao-senha.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperação de senha</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
+    <link rel="stylesheet" href="../css/tipografia.css">
     <link rel="stylesheet" href="../css/recuperacao-senha.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,7 +30,7 @@
     <main class="d-flex justify-content-center">
         <section class="formulario">
             <form class="pt-5 mx-4 d-flex flex-column align-items-center">
-                <h1 class="titulo-login">Recuperação de senha:</h1>
+                <h1 class="titulo-recuperacao">Recuperação de senha:</h1>
                 <label class="e-mail-usuario mb-3">Digite seu e-mail cadastrado:</label>
                 <input type="email" class="form-control mb-3 input-email" name="email" placeholder="E-mail"
                     aria-describedby="emailHelp">
