FEAT: footer cadastro

--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -44,6 +44,11 @@
         </section>
     </main>
 
+    <footer class="footer shadow text-center">
+        <a href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="../../assets/github-icon.png"></a> 
+        <p> Provi Hack - Time 23</p>
+    </footer>
+
      <script       src="https://code.jquery.com/jquery-3.6.0.min.js"       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="       crossorigin="anonymous"     ></script>
      <script src="../js/index.js"></script> 
 </body>
