REFACT: tiranto a tipografia dos css

--- a/src/html/recuparecao-senha.html
+++ b/src/html/recuparecao-senha.html
@@ -24,7 +24,7 @@
     <main class="d-flex justify-content-center">
         <section class="formulario">
             <form class="pt-5 mx-4 d-flex flex-column align-items-center">
-                <h1 class="titulo-login">Recuperação de senha:</h1>
+                <h1 class="titulo-recuperacao">Recuperação de senha:</h1>
                 <label class="e-mail-usuario mb-3">Digite seu e-mail cadastrado:</label>
                 <div class="form-floating mb-3">
                     <input type="email" class="form-control mb-3 input-email" name="email" placeholder="E-mail"
