FIX: footer landing page

--- a/index.html
+++ b/index.html
@@ -44,11 +44,6 @@
             <img src="./assets/imagem-capa.gif" class="imagem-capa" alt="Imagem de um índio idoso segurando um cajado">
         </div>
     </section>
-   
-    <footer class="footer">
-        <p class="text-dark m-0 text-center">contato: <a class="text-dark" href="mailto:email@linguigena">email@linguigena.com.br</a></p>
-      </footer>
-        
 
     <div class="container-pilares">
         <img src="assets/3-pilares.png" class="pilares">
@@ -101,8 +96,8 @@
         </div>
     </div>
 
-    <footer class="footer shadow text-center">
-        <a href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="../../assets/github-icon.png"></a> 
+    <footer class="footer shadow  text-center">
+        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
         <p> Provi Hack - Time 23</p>
     </footer>
 
