--- a/src/html/busca-palavras.html
+++ b/src/html/busca-palavras.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,33 @@
     <title>Banco de palavras</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
     <link rel="stylesheet" href="../css/tipografia.css">
+    <link rel="stylesheet" href="../css/busca-palavras.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <header class="navbar navbar-expand-lg navbar-light bg-light shadow">
+        <div class="container-fluid">
+            <img src="../../assets/logo-nav.png "
+                alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
+                height="50" class="d-inline-block align-text-top ms-2">
+        </div>
+        </div>
+    </header>
+    <div class="container-busca">
+        <h3 class="titulo-login mt-5 mb-3">Qual língua você está procurando?</h3>
+        <div class="dropdown">
+            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                Escolha uma língua?</button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="#">Karib</a></li>
+            </ul>
+        </div>
+    </div>
+   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
