--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -8,6 +8,7 @@
     <title>Sobre</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
     <link rel="stylesheet" href="../css/tipografia.css">
+    <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/sobre.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -43,7 +44,10 @@
         <h1 class="mt-3 ms-3 titulo-sobre">Alguns dados:</h1>
 
     </main>
-
+    <footer class="footer shadow  text-center">
+        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
+        <p> Provi Hack - Time 23</p>
+    </footer>
 </body>
 
 </html>
