--- a/src/html/registro-palavras.html
+++ b/src/html/registro-palavras.html
@@ -8,6 +8,7 @@
     <title>Registrar palavra</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
     <link rel="stylesheet" href="../css/tipografia.css">
+    <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/registro-palavras.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -26,7 +27,6 @@
         </div>
         </div>
     </header>
-    <main>
         <main>
             <section class="formulario">
                 <form class="pt-5 mx-4 d-flex flex-column align-items-center">
@@ -50,7 +50,10 @@
 
             </section>
         </main>
-    </main>
+        <footer class="footer shadow  text-center">
+            <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
+            <p> Provi Hack - Time 23</p>
+        </footer>   
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
