FEAT: footer quem somos

--- a/src/html/quem-somos.html
+++ b/src/html/quem-somos.html
@@ -115,7 +115,11 @@
 
         </div>
     </section>
-
+    
+    <footer class="footer shadow  text-center">
+        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
+        <p> Provi Hack - Time 23</p>
+    </footer>
 </body>
 
 </html>
