--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -8,6 +8,7 @@
     <title>Cadastre-se</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
     <link rel="stylesheet" href="../css/tipografia.css">
+    <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/cadastro.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
