--- a/src/html/recuparecao-senha.html
+++ b/src/html/recuparecao-senha.html
@@ -8,7 +8,7 @@
     <title>Recuperação de senha</title>
     <link rel="shortcut icon" href="../../assets/favicon.png">
     <link rel="stylesheet" href="../css/tipografia.css">
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="../css/layout.css">
     <link rel="stylesheet" href="../css/recuperacao-senha.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -43,7 +43,7 @@
         </section>
     </main>
     <footer class="footer shadow  text-center">
-        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
+        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="../../assets/github-icon.png"></a> 
         <p> Provi Hack - Time 23</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
