--- a/src/html/busca-palavras.html
+++ b/src/html/busca-palavras.html
@@ -29,12 +29,16 @@
                 data-bs-toggle="dropdown" aria-expanded="false">
                 Escolha uma língua?</button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href="#">Karib</a></li>
+                <li value="karib" name="idioma" onclick="buscaPalavras('karib')"><a class="dropdown-item" href="#">Karib</a></li>
+                <li value="teste" name="idioma" onclick="buscaPalavras('teste')"><a class="dropdown-item" href="#">Teste</a></li>
             </ul>
+            
         </div>
     </div>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script       src="https://code.jquery.com/jquery-3.6.0.min.js"       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="       crossorigin="anonymous"     ></script>
+    <script src="../js/buscaPalavras.js"></script>
 </body>
 
 </html>
