--- a/src/html/sobre.html
+++ b/src/html/sobre.html
@@ -41,11 +41,11 @@
             indígenas, queremos gerar uma plataforma colaborativa capaz de manter o registo da língua visando o seu
             patrimonio cultural.
         </h4>
-        <h1 class="mt-3 ms-3 titulo-sobre">Alguns dados:</h1>
+       
 
     </main>
     <footer class="footer shadow  text-center">
-        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
+        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="../../assets/github-icon.png"></a> 
         <p> Provi Hack - Time 23</p>
     </footer>
 </body>
