--- a/src/html/registro-palavras.html
+++ b/src/html/registro-palavras.html
@@ -51,7 +51,7 @@
             </section>
         </main>
         <footer class="footer shadow  text-center">
-            <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
+            <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="../../assets/github-icon.png"></a> 
             <p> Provi Hack - Time 23</p>
         </footer>   
 
