FEAT: Adicionado link para cadastro

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -32,12 +32,18 @@
                   </div>
                   <div class="form-floating mb-3">
                     <input input type="password" class="form-control mb-3" placeholder="Senha" id="floatingInput" >
-                    <label for="floatingInput">Senha</label>
+                    <label for="floatingInput">Senha</label>                    
                   </div>
             </div>
+            
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-success">Entrar</button>
+                <button type="button" class="btn btn-success">Entrar</button>               
+                
             </div>
+            <div>
+                <p class="mt-2">Não tem conta ainda? <a class="linkcadastro" href="./cadastro.html"> <strong> CADASTRE-SE </strong> </a> </p> 
+            </div>
+
         </form>
     </main>
 </body>
