FEAT: adicionando tag no busca-palavras

--- a/src/html/busca-palavras.html
+++ b/src/html/busca-palavras.html
@@ -36,7 +36,12 @@
             
         </div>
     </div>
-    +
+
+    <div id="caixa">
+        
+    </div>
+
+
     <footer class="footer shadow text-center">
         <a href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="../../assets/github-icon.png"></a> 
         <p> Provi Hack - Time 23</p>
