FEAT: add caminhos landing page - colaborador

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     registro para as futuras gerações, você pode nos ajudar?
                 </h4>
                 <div class="container-botao mb-5">
-                    <button type="button" class="btn btn-success mt-4">Quero ser um colaborador!</button>
+                    <button type="button" id="btnColaborador" class="btn btn-success mt-4">Quero ser um colaborador!</button>
                     <button type="button" class="btn btn-success mt-4" data-bs-toggle="modal"
                         data-bs-target="#exampleModal">Para empresas!</button>
                 </div>
