--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linguígena</title>
     <link rel="shortcut icon" href="./assets/favicon.png">
-    <link rel="stylesheet" href="./src/css/tipografia.css">
     <link rel="stylesheet" href="./src/css/landing-page.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,22 +18,19 @@
             <img src="./assets/logo-nav.png"
                 alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
                 height="50" class="d-inline-block align-text-top ms-2">
-                <div>
-                <a class="me-3 link-nav" href="./src/html/sobre.html">Sobre</a>
-                <a class="me-3 link-nav" href="./src/html/quem-somos.html">Quem somos</a>
-            <button type="button" id="btnEntrar" class="btn btn-success me-2">Entrar/Cadastrar</button></div>
+            <button type="button" id="btnEntrar" class="btn btn-success me-2">Entrar/Cadastrar</button>
         </div>
         </div>
     </header>
     <section class="conteudo">
-        <div class="container-capa mt-4">
+        <div class="container-capa ms-2">
             <div class="conteudo-capa">
-                <h1 class="mt-4 titulo-landing">Ajude a manter um registro das línguas indígenas e seu patrimônio
+                <h1 class="mt-2 titulo-landing">Ajude a manter um registro das línguas indígenas e seu patrimônio
                     cultural!</h1>
                 <h4>
                     Consideramos que a identidade linguística é um dos emblemas mais importantes da identidade social
                     dos grupos indígenas, por isso queremos gerar uma plataforma colaborativa capaz de manter esse
-                    registro para as futuras gerações, você pode nos ajudar?
+                    registro pasa as futuras gerações, você pode nos ajudar?
                 </h4>
                 <div class="container-botao mb-5">
                     <button type="button" id="btnColaborador" class="btn btn-success mt-4">Quero ser um
@@ -44,66 +40,14 @@
             <img src="./assets/imagem-capa.gif" class="imagem-capa" alt="Imagem de um índio idoso segurando um cajado">
         </div>
     </section>
+   
+    <footer class="footer">
+        <p class="text-dark m-0 text-center">contato: <a class="text-dark" href="mailto:email@linguigena">email@linguigena.com.br</a></p>
+      </footer>
+        
 
-    <div class="container-pilares">
-        <img src="assets/3-pilares.png" class="pilares">
-    </div>
-    <div class="container-cards mt-2">
-        <div class="card mt-2 shadow" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text">Apenas <strong>37,4%</strong> dos indígenas no Brasil <strong>falam sua língua
-                        nativa.</strong></p>
-                <a href="https://www.bbc.com/portuguese/brasil-43010108" class="card-link">Ler mais</a>
-            </div>
-        </div>
-        <div class="card mt-2 shadow" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text">Existem por volta de <strong>170 línguas indígenas ameaçadas de extinção</strong>
-                    no Brasil..</p>
-                <a href="https://pib.socioambiental.org/pt/L%C3%ADnguas_silenciadas,_novas_l%C3%ADnguas" class="card-link">Ler mais</a>
-            </div>
-        </div>
-        <div class="card mt-2 shadow" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text">Apenas <strong>12,7%</strong> dos indígenas que não moram mais em terras indígenas
-                    <strong>falam a(s) língua(s) dos seus pais ou avós.</strong>
-                </p>
-                <a href="https://pib.socioambiental.org/pt/L%C3%ADnguas_silenciadas,_novas_l%C3%ADnguas" class="card-link">Ler mais</a>
-            </div>
-        </div>
-    </div>
-    <div class="container-cards mt-2 mb-5">
-        <div class="card shadow" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text">A média é de <strong>250 falantes por língua</strong> e existem línguas que contam
-                    com <strong>menos de 10 falantes.</strong></p>
-                <a href="https://pib.socioambiental.org/pt/L%C3%ADnguas_silenciadas,_novas_l%C3%ADnguas" class="card-link">Ler mais</a>
-            </div>
-        </div>
-        <div class="card mt-2 shadow" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text"><strong>19 grupos indígenas
-                        já foram extintos</strong> no Brasil desde 1500.</p>
-                <a href="https://brasil500anos.ibge.gov.br/estatisticas-do-povoamento/grupos-indigenas-extintos.html" class="card-link">Ler mais</a>
-            </div>
-        </div>
-        <div class="card mt-2 shadow" style="width: 18rem;">
-            <div class="card-body">
-                <p class="card-text"><strong>817.963</strong>
-                    é o número de indígenas brasileiros conforme o senso de 2021.</p>
-                <a href="https://www.fundobrasil.org.br/blog/povos-indigenas-atualmente-quebre-estereotipos/" class="card-link">Ler mais</a>
-            </div>
-        </div>
-    </div>
-
-    <footer class="footer shadow  text-center">
-        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="./assets/github-icon.png"></a> 
-        <p> Provi Hack - Time 23</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./src/js/indexController.js"></script>
 </body>
 
 </html>
