Revert "BUGFIX: ajustando commit"
This reverts commit d8150cf8a3ec67e0b35e5e911d262cf47137f13f.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,22 @@
             <img src="./assets/logo-nav.png"
                 alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
                 height="50" class="d-inline-block align-text-top ms-2">
-                <a class="me-3 link-nav" href="./src/html/busca-palavras.html">Registros</a>
-        <div class="container-capa ms-2">
+                <div>
+                <a class="me-3 link-nav" href="./src/html/sobre.html">Sobre</a>
+                <a class="me-3 link-nav" href="./src/html/quem-somos.html">Quem somos</a>
+            <button type="button" id="btnEntrar" class="btn btn-success me-2">Entrar/Cadastrar</button></div>
+        </div>
+        </div>
+    </header>
+    <section class="conteudo">
+        <div class="container-capa mt-4">
             <div class="conteudo-capa">
-                <h1 class="mt-2 titulo-landing">Ajude a manter um registro das línguas indígenas e seu patrimônio
+                <h1 class="mt-4 titulo-landing">Ajude a manter um registro das línguas indígenas e seu patrimônio
                     cultural!</h1>
                 <h4>
                     Consideramos que a identidade linguística é um dos emblemas mais importantes da identidade social
                     dos grupos indígenas, por isso queremos gerar uma plataforma colaborativa capaz de manter esse
-                    registro pasa as futuras gerações, você pode nos ajudar?
+                    registro para as futuras gerações, você pode nos ajudar?
                 </h4>
                 <div class="container-botao mb-5">
                     <button type="button" id="btnColaborador" class="btn btn-success mt-4">Quero ser um colaborador!</button>
@@ -39,11 +46,6 @@
             <img src="./assets/imagem-capa.gif" class="imagem-capa" alt="Imagem de um índio idoso segurando um cajado">
         </div>
     </section>
-   
-    <footer class="footer">
-        <p class="text-dark m-0 text-center">contato: <a class="text-dark" href="mailto:email@linguigena">email@linguigena.com.br</a></p>
-      </footer>
-        
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
