--- a/src/html/cadastro.html
+++ b/src/html/cadastro.html
@@ -25,8 +25,10 @@
     </header>
     <main class="d-flex justify-content-center">
         <section class="pt-5 mx-4">
-            <form>
+            <h3 id="concluido"></h3>
+            <form id="formulario">
                 <h3 class="titulo-cadastro">Cadastre-se para ser voluntário!</h3>
+                
                 <div class="d-flex mt-5">
                     <input type="text" id="nome" aria-label="Nome" placeholder="Nome Completo" class="form-control mb-3 me-3" >
                     <input type="text" id="lingua" aria-label="Lingua" placeholder="Língua nativa" class="form-control mb-3" >
@@ -35,7 +37,7 @@
                     <input type="email" id="email" class="form-control mb-3" placeholder="E-mail" id="exampleInputEmail1"
                         aria-describedby="emailHelp" >
                     <input type="password" id="senha" class="form-control mb-3" placeholder="Senha" id="exampleInputPassword1">
-                    <input type="password" class="form-control mb-3" placeholder="Confirme sua senha"
+                    <input type="password" id="confirma" class="form-control mb-3" placeholder="Confirme sua senha"
                         id="exampleInputPassword1" id="xp">
                 </div>
                 <div class="d-flex justify-content-center">
@@ -52,6 +54,7 @@
 
      <script       src="https://code.jquery.com/jquery-3.6.0.min.js"       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="       crossorigin="anonymous"     ></script>
      <script src="../js/index.js"></script> 
+     <script src="../js/cadastro.js"></script>
 </body>
 
 </html>
