--- a/src/html/quem-somos.html
+++ b/src/html/quem-somos.html
@@ -105,7 +105,7 @@
             </figure>
 
             <h5 class="nomes">Rafael Soares</h5>
-            <p>Dev. Back-End</p>
+            <p>Dev. Full-Stack</p>
             <div class="redes-sociais mb-5">
                 <a href="https://www.linkedin.com/in/rafaelsfsoares/"><img src="../../assets/in-icon.png"
                         class="img-redes"></a>
