--- a/src/html/recuparecao-senha.html
+++ b/src/html/recuparecao-senha.html
@@ -31,14 +31,14 @@
     <main class="d-flex justify-content-center">
         <section class="formulario">
             <form class="pt-5 mx-4 d-flex flex-column align-items-center">
-                <h1 class="titulo-recuperacao">Recuperação de senha:</h1>
+                <h1 class="titulo-recuperacao" id="titulo-recuperacao">Recuperação de senha:</h1>
                 <label class="e-mail-usuario mb-3">Digite seu e-mail cadastrado:</label>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control mb-3 input-email" name="email" placeholder="E-mail"
+                    <input type="email" class="form-control mb-3 input-email" name="email"  id="email" placeholder="E-mail"
                         aria-describedby="emailHelp" id="floatingInput">
                     <label for="floatingInput">Email</label>
                 </div>
-                <button type="button" class="btn btn-success me-2 ">Enviar</button>
+                <button type="button" id="recupera" class="btn btn-success me-2 ">Enviar</button>
             </form>
         </section>
     </main>
@@ -49,6 +49,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+        <script src="../js/esqueceuSenha.js"></script>
 </body>
 
 </html>
