--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
                 height="50" class="d-inline-block align-text-top ms-2">
                 <div>
+                <a class="me-3 link-nav" href="./src/html/busca-palavras.html">Buscar Palavras</a>    
                 <a class="me-3 link-nav" href="./src/html/sobre.html">Sobre</a>
                 <a class="me-3 link-nav" href="./src/html/quem-somos.html">Quem somos</a>
             <button type="button" id="btnEntrar" class="btn btn-success me-2">Entrar/Cadastrar</button></div>
