FIX: caminho das âncoras no html

--- a/src/html/registro-palavras.html
+++ b/src/html/registro-palavras.html
@@ -21,8 +21,9 @@
                     alt="Logotipo com a palavra linguígena plataforma colaborativa em verde e vermelho" width="150"
                     height="50" class="d-inline-block align-text-top ms-2"></a>
             <div>
-                <a class="me-3 link-nav" href="../html/sobre.html">Sobre</a>
-                <a class="me-3 link-nav" href="../html/quem-somos.html">Quem somos</a>
+                <a class="me-3 link-nav" href="./busca-palavras.html">Buscar Palavras</a> 
+                <a class="me-3 link-nav" href="./sobre.html">Sobre</a>
+                <a class="me-3 link-nav" href="./quem-somos.html">Quem somos</a>
             </div>
         </div>
         </div>
