--- a/src/html/recuparecao-senha.html
+++ b/src/html/recuparecao-senha.html
@@ -34,8 +34,8 @@
                 <h1 class="titulo-recuperacao" id="titulo-recuperacao">Recuperação de senha:</h1>
                 <label class="e-mail-usuario mb-3">Digite seu e-mail cadastrado:</label>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control mb-3 input-email" name="email"  id="email" placeholder="E-mail"
-                        aria-describedby="emailHelp" id="floatingInput">
+                    <input type="email" class="form-control mb-3 input-email" name="email" id="email"
+                        placeholder="E-mail" aria-describedby="emailHelp" id="floatingInput">
                     <label for="floatingInput">Email</label>
                 </div>
                 <button type="button" id="recupera" class="btn btn-success me-2 ">Enviar</button>
@@ -43,13 +43,14 @@
         </section>
     </main>
     <footer class="footer shadow  text-center">
-        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon" src="../../assets/github-icon.png"></a> 
+        <a class="link" href="https://github.com/RafaelSFsoares/proviHack-time23"><img class="giticon"
+                src="../../assets/github-icon.png"></a>
         <p> Provi Hack - Time 23</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-        <script src="../js/esqueceuSenha.js"></script>
+    <script src="../js/esqueceuSenha.js"></script>
 </body>
 
 </html>
