FEAT: Adicionando novos idiomas no dropdown

--- a/src/html/busca-palavras.html
+++ b/src/html/busca-palavras.html
@@ -31,7 +31,14 @@
                 Escolha uma língua?</button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li value="karib" name="idioma" onclick="buscaPalavras('karib')"><a class="dropdown-item" href="#">Karib</a></li>
-                <li value="teste" name="idioma" onclick="buscaPalavras('teste')"><a class="dropdown-item" href="#">Teste</a></li>
+                <li value="teste" name="idioma" onclick="buscaPalavras('Guajajara')"><a class="dropdown-item" href="#">Guajajara</a></li>
+                <li value="teste" name="idioma" onclick="buscaPalavras('Sateré-mawé')"><a class="dropdown-item" href="#">Sateré-mawé</a></li>
+                <li value="teste" name="idioma" onclick="buscaPalavras('Terena')"><a class="dropdown-item" href="#">Terena</a></li>
+                <li value="teste" name="idioma" onclick="buscaPalavras('Nheengatu')"><a class="dropdown-item" href="#">Nheengatu</a></li>
+                <li value="teste" name="idioma" onclick="buscaPalavras('Kayapó')"><a class="dropdown-item" href="#">Kayapó</a></li>
+
+
+
             </ul>
             
         </div>
