FEAT: Feedback visual de page registroPalavra criado

--- a/src/html/registro-palavras.html
+++ b/src/html/registro-palavras.html
@@ -31,7 +31,7 @@
         <main>
             <section class="formulario">
                 <form class="pt-5 mx-4 d-flex flex-column align-items-center">
-                    <h1 class="text-center titulo-inserir-palavra my-5">Inserir uma palavra</h1>
+                    <h1 class="text-center titulo-inserir-palavra my-5" id="titulo">Inserir uma palavra</h1>
                     <input type="text" id="linguaNativa" class="form-control  mb-4 input-palavras" placeholder="Língua nativa"
                         name="linguagem" aria-describedby="default input example">
 
